[project]
name = "autisticstuff"
version = "0.1.0a1"
description = "Autistic stuff, either created by us, or stolen from someone on the internet"
readme = "README.md"
authors = [
    { name = "plassstic", email = "schwartzalexey@yandex.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
