[project]
name = "autisticstuff"
version = "0.1.3b3"
description = "Autistic stuff, either created by us, or stolen from someone on the internet"
readme = "README.md"
authors = [
    { name = "plassstic", email = "i@apechenin.ru" },
    { name = "amnesiawho", email = "ai28092005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.43",
]   

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
order-by-type = false
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "G", "PIE", "Q", "SIM", "PTH", "TD", "PL", "PERF", "FAST", "RUF"]
ignore = ["PERF401", "ARG", "ANN", "D", "E203", "I", "E501", "T201", "T203", "TRY003", "RUF001", "RUF100", "C416", "W1", "W2", "B008", "S101", "G004", "PLC"]
